# rust-parser

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  output.rs  run.sh
example_input_source_code/: algebraic_simpl.txt  cse.txt  error.txt  full.txt  full_copy.txt  loop_invariant.txt  multiple_regions.txt  simple1.txt  simple2.txt  simple3.txt  simple4.txt  unreachable_code.txt
example_output_source_code/: algebraic_simpl.rs  cse.rs  error.txt  full.rs  full.txt  loop_invariant.rs  multiple_regions.txt  simple1.rs  simple1.txt  simple2.rs  simple2.txt  simple3.rs  simple3.txt  simple4.rs  simple4.txt  unreachable_code.rs
examples/: full.txt  simple1.txt
pybind_test/: Cargo.toml  lib.rs
pybind_test/src/: auto.rs  lib.rs  util.rs
src/: ast.rs  ast_rules.rs  clean_ast.rs  codegen.rs  grammar.lalrpop  grammar_ast.rs  grammar_tokens.rs  main.rs  proposed_production_rules.txt  source_code.txt  token.rs  token_fsm.rs
