[package]
name = "rust-parser"
version = "0.1.0"
edition = "2021"


[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.22.0"

[dependencies]
strum = { version = "0.26", features = ["derive"] }
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
string_enum = "0.4.4"
regex = "1.11.1"
